--- a/Examen Practico Final - FE1/Examen Practico Final - FE1/css/styles.css
+++ b/Examen Practico Final - FE1/Examen Practico Final - FE1/css/styles.css
@@ -18,6 +18,8 @@ ul{
     list-style-type: none;
 }
 
+
+
 /* header principal */
 #header{
     display: flex;
@@ -27,6 +29,12 @@ ul{
     margin: 20px 5px 0px 5px;
     width: 100vw;
     height: 180px;
+}
+
+/* menu ambur- oculto primeramente */
+
+#header .contein-hamburger{
+    display: none;
 }
 
 /* nav de header */
@@ -395,6 +403,7 @@ ul{
     background-color: #F3603B;
     color: #FFFFFF;
     margin-left: 15px;
+    cursor: pointer;
 }
 
 
@@ -409,4 +418,217 @@ ul{
     position: absolute;
     bottom: 35px;
     right: 150px;
-}
+ }
+
+
+
+
+
+ /* MEDIA QUERIS PARA 375PX */
+
+
+ @media screen and (max-width: 600px){
+
+    /* header */
+
+    #header{
+        width: 600px;
+        height: 200px;
+        margin-bottom: 150px;
+        flex-direction: row;
+        align-items: center;
+    }
+    #header .navheader{
+        display: none;
+    }
+    #header button{
+        display: none;
+    }
+
+    #header .contein-hamburger{
+        display: inline-block;
+    }
+
+    /* main */
+
+    #main{
+        width: 600px;
+        height: 2090px;
+    }
+
+    #main .contein-top {
+        flex-direction: column-reverse;
+        justify-content: flex-start;
+        align-items: center;
+        margin-top: 100px;
+        margin-bottom: 150px;
+    }
+
+    #main .contein-top .topleft{
+        text-align: center;
+    }
+
+
+/* main center */
+    #main .contein-center{
+        flex-direction: column;
+        margin-top: 150px;
+    }
+
+    #main .contein-center .centerleft{
+        margin-bottom: 200px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    #main .contein-center .centerleft p{
+        position: relative;
+        left: 60px;
+    }
+
+    #main .contein-center .centerright .ol-title{
+        background-color: #e4bcb2;
+        padding: 10px;
+        border-radius: 30px;
+
+    }
+
+    /*main- bottom */
+
+    /* bottom sup */
+    #main .contein-bottom{
+        margin-top: 200px;
+    
+
+    }
+
+    #main .contein-bottom .bottom-sup .contein-tree-cards #unocards{
+        display: none;
+    }
+
+    #main .contein-bottom .bottom-sup .contein-tree-cards #doscards{
+        display: none;
+    }
+
+    /* bottom inf */
+
+    #main .contein-bottom .bottom-inf{
+    
+        flex-direction: column;
+        width: 600px;
+        
+    }
+
+    /* footer */
+    #footer{
+        flex-direction: column;
+        align-items: center;
+        width: 600px;
+        height: 500px;
+    }
+
+    #footer .form{
+        order: -2;
+        position: relative;
+        top: 25px;
+        left: 25px;
+       
+    }
+
+    #footer .contein-ryl{
+        order: 2;
+        position: relative;
+        right: 10px;
+       
+    }
+
+    #footer .contein-nav{
+        position: relative;
+        left: 15px;
+
+    }
+
+    #footer .copyright{
+        position: relative;
+        top:190px;
+        left: 3px;
+
+    }
+
+ }
+
+
+
+ /* PSEUDO-CLASES PSEUDO-ELEMENTOS */
+
+
+ /*03 botton get started class bp */
+
+  .bp:hover {
+    color: #ebebeb;
+    background-color: #e0a394;
+    border-bottom: 1px solid #000000;
+    border-top: 1px solid #000000;
+    transition: all 500ms;
+
+ }
+
+ .bp:active{
+     background-color: #d37c65;
+     border inset: #000000 2px solid;
+     border-bottom: #000000 2px solid;
+     border-right: #000000 2px solid;
+     transition: all 100ms;
+     
+ }
+
+ #header .navheader .ul-nav .li-nav .atop:hover{
+     color: rgb(119, 129, 165);
+     transition: all 300ms;
+ }
+
+ /*01 bottom get started class bs */
+
+#main .contein-bottom .bottom-inf .contein-bs .bs:hover{
+     background-color: #f0f0f0;
+     color: #eb9360;
+     transition: all 500ms;
+
+ }
+
+ #main .contein-bottom .bottom-inf .contein-bs .bs:active{
+    background-color: #d37c65;
+    border inset: #000000 2px solid;
+    border-bottom: #000000 2px solid;
+    border-right: #000000 2px solid;
+    transition: all 100ms;
+ }
+
+ /* go */
+
+ #footer .form #go:hover{
+    color: #ebebeb;
+    background-color: #e0a394;
+    border-bottom: 1px solid #000000;
+    border-top: 1px solid #000000;
+    transition: all 500ms;
+
+ }
+
+
+ /* nav de footer */
+
+
+ #footer .contein-nav ul .li-foot .afoot:hover{
+     color:#F3603B;
+     transition: all 600ms;
+ }
+
+ /* redes */
+
+ #footer .contein-ryl .contein-redes i:hover{
+     color: #F3613C;
+     transition: all 300ms;
+ }
